tools/tests/errors/bytes_decode_ascii_high.ki
# A byte >= 0x80 cannot be decoded as ascii.
discard Bytes([0xFF]).decode("ascii")
